Animacion de particulas Parte2

--- a/clamp-css/index.html
+++ b/clamp-css/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="css-clamp.css" />
+    <link rel="stylesheet" href="css-clamp.css S" />
   </head>
 
   <body>
