--- a/NAVBAR-03/index.html
+++ b/NAVBAR-03/index.html
@@ -75,6 +75,46 @@
       reiciendis omnis aliquam est officia voluptate assumenda delectus distinctio, dicta voluptas
       veritatis? Facere in commodi odio explicabo?
     </section>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam molestiae nesciunt explicabo
+      distinctio enim sunt magni! Omnis nesciunt adipisci amet, commodi iusto rem aut fugit possimus
+      at laudantium aspernatur atque?
+    </h1>
 
     <script src="script.js"></script>
   </body>
