--- a/VideoBackground3/index.html
+++ b/VideoBackground3/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="banner">
       <video autoplay loop muted plays-inline>
-        <source src="../assets/video/video.webm" type="video/webm" />
+        <source src="../assets/video/Video.webm" type="video/webm" />
       </video>
       <div class="navbar">
         <img class="logo" src="../assets/imgs/logo.png" alt="" />
