--- a/Modal1/index.html
+++ b/Modal1/index.html
@@ -20,6 +20,17 @@
       </div>
     </div>
 
+    <button id="open-modal-btn-x" class="open-modal-btn">Abrir Modal</button>
+
+    <!-- Estructura del modal -->
+    <div id="modalX" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" id="close-modal-btn-x">&times;</span>
+        <h2>Título del Modal XXXXXXX</h2>
+        <p>Este es el contenido de un modal básico.</p>
+      </div>
+    </div>
+
     <script src="scripts.js"></script>
     <!-- Archivo JavaScript externo -->
   </body>
